--- a/gt_visualization.ipynb
+++ b/gt_visualization.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "with open(\"pose_labels/subject14_all_labels.cpl\", \"rb\") as f:\n",
+    "with open(\"/home/ubuntu/gdrive/workspace/dataset_release/aligned_data/pose_labels/subject14_all_labels.cpl\", \"rb\") as f:\n",
     "    cpl = pickle.load(f)\n",
     "\n",
     "cpl.keys()"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,13 +46,36 @@
        "(6981, 3, 17)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cpl['refined_gt_kps'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7011"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "frames_dir = \"/home/ubuntu/gdrive/workspace/blurred_videos/subject14_0505/subject14_color0/\"\n",
+    "frames = os.listdir(frames_dir)\n",
+    "len(frames)"
    ]
   },
   {
@@ -860,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
