added rgb for grayscale training

--- a/gt_visualization.ipynb
+++ b/gt_visualization.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "import os"
    ]
   },
   {
@@ -53,6 +54,87 @@
    ],
    "source": [
     "cpl['refined_gt_kps'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['subject10_featuremap.npy',\n",
+       " 'subject11_featuremap.npy',\n",
+       " 'subject12_featuremap.npy',\n",
+       " 'subject13_featuremap.npy',\n",
+       " 'subject14_featuremap.npy',\n",
+       " 'subject15_featuremap.npy',\n",
+       " 'subject16_featuremap.npy',\n",
+       " 'subject17_featuremap.npy',\n",
+       " 'subject18_featuremap.npy',\n",
+       " 'subject19_featuremap.npy',\n",
+       " 'subject1_featuremap.npy',\n",
+       " 'subject20_featuremap.npy',\n",
+       " 'subject2_featuremap.npy',\n",
+       " 'subject3_featuremap.npy',\n",
+       " 'subject4_featuremap.npy',\n",
+       " 'subject5_featuremap.npy',\n",
+       " 'subject6_featuremap.npy',\n",
+       " 'subject7_featuremap.npy',\n",
+       " 'subject8_featuremap.npy',\n",
+       " 'subject9_featuremap.npy']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radar_dir = \"/home/ubuntu/gdrive/workspace/dataset_release/features/radar/\"\n",
+    "radar_files = os.listdir(radar_dir)\n",
+    "radar_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6812, 14, 14, 5)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radar_npy = np.load(os.path.join(radar_dir, \"subject14_featuremap.npy\"))\n",
+    "radar_npy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 6980]\n",
+      "[145, 6956]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cpl['rgb_avail_frames'])\n",
+    "print(cpl['radar_avail_frames'])\n"
    ]
   },
   {
